# Multi_Robots_DMPC

./: README.md
centerized_form/: CMakeLists.txt  Readme.txt  myrvizdefault.rviz  package.xml
centerized_form/src/: batch_solver.cpp  batch_solver.h  fg_eval.h  main.cpp  utility.h  vehicle.h
sync_dmpc_form/: README.txt
sync_dmpc_form/src/: launch_all.launch
sync_dmpc_form/src/mymsg/: CMakeLists.txt  package.xml
sync_dmpc_form/src/mymsg/msg/: neighborpos.msg
sync_dmpc_form/src/vehicle01/: CMakeLists.txt  myrvizdefault.rviz  package.xml
sync_dmpc_form/src/vehicle01/src/: batch_solver.cpp  batch_solver.h  fg_eval.h  main.cpp  utility.h  vehicle.h
sync_dmpc_form/src/vehicle02/: CMakeLists.txt  package.xml
sync_dmpc_form/src/vehicle02/src/: fg_eval.h  main.cpp  utility.h
sync_dmpc_form/src/vehicle03/: CMakeLists.txt  package.xml
sync_dmpc_form/src/vehicle03/src/: batch_solver.cpp  fg_eval.h  main.cpp  utility.h  vehicle.h
